increase z-index on hl-dropdown items to fix z-index issue

--- a/frontend/app/stylesheets/base/dropdown.scss
+++ b/frontend/app/stylesheets/base/dropdown.scss
@@ -20,7 +20,7 @@ $dropdown-menu-color: #fff;
     display: none;
     position: absolute;
     left: -1px;
-    z-index: 100;
+    z-index: 998;
     -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.15);
